Ensure we don't repeat QTBUG-30931 in Qt5

The issue is already fixed in 5.0 but let's be nice and ensure the issue
won't be reintroduced later.

Task-number: QTBUG-30931

Change-Id: Ia6944acaf6e7217f8d0f1fa75d0e9977db11d892
Reviewed-by: Lars Knoll <lars.knoll@digia.com>

cregit: e3dadce470bcc020dc11331be1877a10e70786a6 https://github.com/qt/qtbase/commit/e3dadce470bcc020dc11331be1877a10e70786a6